<resources>
    <string name="app_name">xul_POS</string>

    <string name="NO">New Order </string>
    <string name="NI">new Item </string>
    <string name="Item">Item: </string>
    <string name="Q">Quantity:  </string>
    <string name="UP">Unit Price: </string>
    <string name="To">total</string>

    <string name="hItem">Enter Item Name</string>
    <string name="hQuan">1</string>
    <string name="hUp">0.00</string>
    <string name="hTo">$0.00 </string>



</resources>
