<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="edu.depaul.csc472.lanny.xul_pos.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/NO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NO"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/NI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NI"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Item"
                android:textSize="20sp"/>

            <AutoCompleteTextView
                android:id="@+id/hItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hItem"
                android:inputType="textAutoComplete|textAutoCorrect|textCapCharacters"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q"
                android:layout_weight="1"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/hQuan"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:imeOptions="actionDone"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/UP"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/hUp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/To"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/hTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="20sp"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/Sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>

    </LinearLayout>
